--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,11 @@
 # Gradle Properties
 org.gradle.jvmargs = -Xmx3G
 
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7897
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7897
+
 # Source Options
 # Use Modern Java(9+) Syntax (Courtesy of Jabel)
 use_modern_java_syntax = true
@@ -12,16 +17,16 @@ generate_javadocs_jar = false
 # Mod Information
 # HIGHLY RECOMMEND complying with SemVer for mod_version: https://semver.org/
 mod_version = 1.0
-root_package = me.morishima
-mod_id = modid
-mod_name = Mod Name
+root_package = cn.childcommunity
+mod_id = gregicality_kids
+mod_name = Gregicality Kids
 
 # Mod Metadata (Optional)
 mod_description =
 mod_url =
 mod_update_json =
 # Delimit authors with commas
-mod_authors = WeatheringWithMe
+mod_authors = ChildCommunityCN
 mod_credits =
 mod_logo_path =
 
@@ -32,7 +37,7 @@ use_dependency_at_files = true
 
 # Run Configurations
 # If multiple arguments/tweak classes are stated, use spaces as the delimiter
-minecraft_username = MorishimaHotaka
+minecraft_username = Oganesson897
 extra_jvm_args =
 extra_tweak_classes =
 
